# lemonade

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  Dockerfile  Dockerfile.rocm  NOTICE.md  README.md  _copilot_build.cmd  mkdocs.yml  setup.ps1  setup.py  setup.sh
src/app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/app/src-tauri/capabilities/: default.json
src/app/src-tauri/icons/: icon.icns
src/app/src-tauri/src/: beacon.rs  commands.rs  events.rs  lib.rs  main.rs  settings.rs  tray_launcher.rs  webview_shim.rs
src/cpp/: BUILD_OPTIONS.md  CMakeLists.txt  CPackRPM.cmake  CopyElectronApp.cmake  DOCKER_GUIDE.md  Extra-Models-Dir-Spec.md  Lemonade_Server_Installer.nsi.in  Lemonade_Server_Installer_beta.nsi  Lemonade_Server_Installer_beta.nsi.in  Multi-Model-Spec.md  README.md  build_installer.ps1  com.lemonade.server.plist.in  com.lemonade.tray.plist.in  postinst  postinst-full  postinst-full-mac  postinst-rpm  postrm  prerm  prerm-rpm
src/cpp/cli/: CMakeLists.txt  agent_config_file.cpp  agent_launcher.cpp  bench.cpp  chat_repl.cpp  hf_pull.cpp  lemonade_client.cpp  main.cpp  model_selection.cpp  opencode_profile.cpp  pi_profile.cpp  recipe_import.cpp
src/cpp/include/lemon/: audio_types.h  auto_tune.h  backend_manager.h  backend_version_policy.h  canonical_id.h  cli_parser.h  cloud_provider_registry.h  collection_orchestrator.h  config_file.h  directory_watcher.h  error_types.h  eviction_engine.h  gguf_capabilities.h  gguf_reader.h  global_vram_monitor.h  hf_variants.h  log_stream.h  logging_config.h  mcp_client.h  mcp_server.h  model_manager.h  model_registry.h  model_types.h  ollama_api.h  prometheus_metrics.h  realtime_session.h  recipe_backend_def.h  recipe_options.h  route_decision_response.h  router.h  routing_classifier_services.h  routing_policy.h  routing_policy_parser.h  routing_policy_store.h  runtime_config.h  server.h  server_capabilities.h  single_instance.h  streaming_proxy.h  suspend_inhibitor.h  (+6 more)
src/cpp/include/lemon/backends/: backend_descriptor.h  backend_descriptor_registry.h  backend_ops.h  backend_registry.h  backend_utils.h  cloud_server.h  fastflowlm_server.h  hf_cache_util.h  install_staging.h  kokoro_server.h  llamacpp_server.h  moonshine_server.h  ryzenaiserver.h  sd_server.h  vllm_server.h  whisper_server.h
src/cpp/include/lemon/utils/: archive_platform.h  custom_args.h  http_client.h  image_sniff.h  json_utils.h  network_beacon.h  network_utils.h  path_platform.h  path_utils.h  platform_constants.h  process_manager.h  process_platform.h  tcp_jsonl_client.h
src/cpp/include/lemon_cli/: agent_config_file.h  agent_launcher.h  bench.h  chat_repl.h  hf_pull.h  lemonade_client.h  model_selection.h  opencode_profile.h  pi_profile.h  recipe_import.h
src/cpp/include/lemon_tray/: server_manager.h  tray_app.h  tray_ui.h
src/cpp/include/lemon_tray/platform/: linux_systemd.h  linux_tray.h  macos_tray.h  tray_interface.h  windows_tray.h
src/cpp/installer/: Product.wxs.in  generate_electron_fragment.py  generate_tauri_fragment.py  lemonade-app.cmd
src/cpp/legacy-cli/: CMakeLists.txt  main.cpp
src/cpp/resources/: architecture_defaults.json  backend_versions.json  bench_scenarios.json  defaults.json  server_models.json  vllm_model_config.json
src/cpp/resources/schemas/: README.md  decision.schema.json  request.schema.json  route_policy.schema.json  schema-lock.json
src/cpp/resources/static/: index.html
src/cpp/server/: anthropic_api.cpp  backend_manager.cpp  cli_parser.cpp  cloud_provider_registry.cpp  collection_orchestrator.cpp  config_file.cpp  directory_watcher.cpp  eviction_engine.cpp  global_vram_monitor.cpp  hf_variants.cpp  lemonade.manifest  lemonade.manifest.in  log_stream.cpp  logging_config.cpp  macos_system_info.mm  main.cpp  mcp_client.cpp  mcp_server.cpp  model_manager.cpp  model_registry.cpp  ollama_api.cpp  prometheus_metrics.cpp  realtime_session.cpp  recipe_options.cpp  route_decision_response.cpp  router.cpp  routing_classifier_services.cpp  routing_classifier_services_router.cpp  routing_policy.cpp  routing_policy_parser.cpp  routing_policy_store.cpp  runtime_config.cpp  server.cpp  streaming_audio_buffer.cpp  streaming_proxy.cpp  system_info.cpp  telemetry.cpp  telemetry.h  vad.cpp  version.rc  (+2 more)
src/cpp/server/backends/: backend_descriptor_registry.cpp  backend_descriptors_generated.h.in  backend_factories_generated.h.in  backend_ops.cpp  backend_registry.cpp  backend_utils.cpp  cloud_server.cpp  fastflowlm_server.cpp  hf_cache_util.cpp  kokoro_server.cpp  llamacpp_server.cpp  moonshine_server.cpp  ryzenaiserver.cpp  sd_server.cpp  vllm_server.cpp  whisper_server.cpp
src/cpp/server/backends/acestep/: acestep_server.cpp
src/cpp/server/backends/cloud/: cloud_server.cpp
src/cpp/server/backends/fastflowlm/: fastflowlm_models.cpp  fastflowlm_server.cpp  flm_arg_resolver.cpp
src/cpp/server/platform/: metrics_linux.cpp  metrics_macos.cpp  metrics_windows.cpp  suspend_linux.cpp  suspend_stub.cpp
src/cpp/server/utils/: http_client.cpp  json_utils.cpp  network_beacon.cpp  path_utils.cpp  process_manager.cpp  tcp_jsonl_client.cpp  wmi_helper.cpp  wmi_helper.h
src/cpp/tray/: CMakeLists.txt  LemonadeServiceManager.h  LemonadeServiceManager.mm  lemonade-server-beta.manifest  lemonade-server-beta.manifest.in  lemonade-server.manifest.in  log-viewer.cpp  main.cpp  server_manager.cpp  tray_app.cpp  tray_launcher.cpp  tray_ui.cpp  version.rc
src/cpp/tray/platform/: linux_tray.cpp  macos_tray.mm  tray_factory.cpp  windows_tray.cpp
src/ryzenai-serve/: .gitignore  CMakeLists.txt  README.md
src/ryzenai-serve/include/ryzenai/: types.h
src/ryzenai-serve/src/: inference_engine.cpp  reasoning.cpp  server.cpp  types.cpp
src/ryzenai-server/: CMakeLists.txt  README.md
src/ryzenai-server/include/ryzenai/: command_line.h  driver_check.h  inference_engine.h  reasoning.h  server.h  tool_calls.h  types.h
src/ryzenai-server/src/: command_line.cpp  driver_check.cpp  inference_engine.cpp  main.cpp  server.cpp  tool_calls.cpp
(+607 files in other folders)
